[package]
name = "conrod-android-skeleton"
version = "0.1.0"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]

[package.metadata.android]
package_name = "com.github.jbg.conrod-android-skeleton"
label = "Conrod Android Skeleton"
android_version = 18
build_targets = ["arm-linux-androideabi"]
assets = "assets"

[[bin]]
name = "conrod-android-skeleton"
path = "src/main.rs"

[dependencies]
android_glue = "*"
conrod = { git = "https://github.com/jbg/conrod", features = ["winit", "glium"] }
glium = { git = "https://github.com/jbg/glium" }
image = "*"
rusttype = "*"
rand = "*"

[replace]
"glium:0.17.0" = { git = "https://github.com/jbg/glium" }
